z-index fix in navbar

--- a/src/navbar/navbar.css
+++ b/src/navbar/navbar.css
@@ -4,7 +4,7 @@
 
 .navbar{
     background-color: transparent !important;
-    z-index: 3;
+    z-index: 4;
 }
 
 .dropdown-menu{
